--- a/Janome_tokenizer.ipynb
+++ b/Janome_tokenizer.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -32,9 +32,27 @@
    ],
    "source": [
     "from janome.tokenizer import Tokenizer\n",
-    "t = Tokenizer() # 形態素解析を行うための準備（インスタンス化、オブジェクト化と呼ばれる）\n",
-    "for token in t.tokenize('すもももももももものうち'): # 形態素解析をした結果を１つ１つ取り出す繰り返し\n",
+    "word_split = Tokenizer() # 形態素解析を行うための準備（インスタンス化、オブジェクト化と呼ばれる）\n",
+    "for token in word_split.tokenize('すもももももももものうち'): # 形態素解析をした結果を１つ１つ取り出す繰り返し\n",
     "\tprint(token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: janome in c:\\users\\uhoku\\appdata\\roaming\\python\\python39\\site-packages (0.4.2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install janome"
    ]
   },
   {
@@ -47,16 +65,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "名詞,一般,*,*\n",
       "すもも\t名詞,一般,*,*,*,*,すもも,スモモ,スモモ\n",
+      "助詞,係助詞,*,*\n",
+      "名詞,一般,*,*\n",
       "もも\t名詞,一般,*,*,*,*,もも,モモ,モモ\n",
+      "助詞,係助詞,*,*\n",
+      "名詞,一般,*,*\n",
       "もも\t名詞,一般,*,*,*,*,もも,モモ,モモ\n",
+      "助詞,連体化,*,*\n",
+      "名詞,非自立,副詞可能,*\n",
       "うち\t名詞,非自立,副詞可能,*,*,*,うち,ウチ,ウチ\n"
      ]
     }
@@ -67,10 +92,29 @@
     "t = Tokenizer()\n",
     "words=[]\n",
     "for token in t.tokenize('すもももももももものうち'):\n",
-    "\thinshi = token.part_of_speech.split(',') ## \n",
-    "\tif hinshi[0] =='名詞' :\n",
-    "\t   print(token)"
+    "    \n",
+    "    hinshi = token.part_of_speech.split(',') ## \n",
+    "    if hinshi[0] =='名詞' :\n",
+    "       print(token)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['今日', 'は', '晴れ']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
