--- a/MeCab_tokenizer.ipynb
+++ b/MeCab_tokenizer.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "1bd79b64",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
     "import MeCab\n",
     "\n",
     "tagger = MeCab.Tagger ('mecabrc') \n",
-    "tagger.parse('')# 実行の準備\n",
+    "#tagger.parse('')# 実行の準備\n",
     "\n",
     "token=tagger.parseToNode('いつもながら、パスタランチはお気軽でいい感じ。今回は2種類のパスタを2人でシェア盛りにしてもらいました。\\\n",
     "エビのオイルベースのショートパスタとトマトパスタ。あっさりした味付けで、いつの間にかペロリと食べてしまいます。お野菜を多く使ってヘルシーな内容 \\\n",
@@ -133,6 +133,14 @@
     "    print(token.surface,token.feature)\n",
     "    token = token.next"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc9137c6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
