--- a/Janome_tokenizer.ipynb
+++ b/Janome_tokenizer.ipynb
@@ -13,6 +13,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: janome in c:\\anaconda\\lib\\site-packages (0.5.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install janome"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -20,20 +37,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "すもも\t名詞,一般,*,*,*,*,すもも,スモモ,スモモ\n",
-      "も\t助詞,係助詞,*,*,*,*,も,モ,モ\n",
-      "もも\t名詞,一般,*,*,*,*,もも,モモ,モモ\n",
-      "も\t助詞,係助詞,*,*,*,*,も,モ,モ\n",
-      "もも\t名詞,一般,*,*,*,*,もも,モモ,モモ\n",
+      "今日\t名詞,副詞可能,*,*,*,*,今日,キョウ,キョー\n",
       "の\t助詞,連体化,*,*,*,*,の,ノ,ノ\n",
-      "うち\t名詞,非自立,副詞可能,*,*,*,うち,ウチ,ウチ\n"
+      "授業\t名詞,サ変接続,*,*,*,*,授業,ジュギョウ,ジュギョー\n",
+      "は\t助詞,係助詞,*,*,*,*,は,ハ,ワ\n",
+      "眠い\t形容詞,自立,*,*,形容詞・アウオ段,基本形,眠い,ネムイ,ネムイ\n"
      ]
     }
    ],
    "source": [
     "from janome.tokenizer import Tokenizer\n",
     "word_split = Tokenizer() # 形態素解析を行うための準備（インスタンス化、オブジェクト化と呼ばれる）\n",
-    "for token in word_split.tokenize('すもももももももものうち'): # 形態素解析をした結果を１つ１つ取り出す繰り返し\n",
+    "for token in word_split.tokenize('今日の授業は眠い'): # 形態素解析をした結果を１つ１つ取り出す繰り返し\n",
     "\tprint(token)"
    ]
   },
@@ -100,21 +115,197 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['今日', 'は', '晴れ']"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "スモモ\t名詞,一般,*,*,*,*,スモモ,スモモ,スモモ\n",
+      "と\t助詞,格助詞,引用,*,*,*,と,ト,ト\n",
+      "よば\t動詞,自立,*,*,五段・バ行,未然形,よぶ,ヨバ,ヨバ\n",
+      "れる\t動詞,接尾,*,*,一段,基本形,れる,レル,レル\n",
+      "栽培\t名詞,サ変接続,*,*,*,*,栽培,サイバイ,サイバイ\n",
+      "種\t名詞,接尾,一般,*,*,*,種,シュ,シュ\n",
+      "は\t助詞,係助詞,*,*,*,*,は,ハ,ワ\n",
+      "多数\t名詞,副詞可能,*,*,*,*,多数,タスウ,タスー\n",
+      "あり\t動詞,自立,*,*,五段・ラ行,連用形,ある,アリ,アリ\n",
+      "、\t記号,読点,*,*,*,*,、,、,、\n",
+      "日本\t名詞,固有名詞,地域,国,*,*,日本,ニッポン,ニッポン\n",
+      "に\t助詞,格助詞,一般,*,*,*,に,ニ,ニ\n",
+      "多く\t形容詞,自立,*,*,形容詞・アウオ段,連用テ接続,多い,オオク,オーク\n",
+      "見\t動詞,自立,*,*,一段,未然形,見る,ミ,ミ\n",
+      "られる\t動詞,接尾,*,*,一段,基本形,られる,ラレル,ラレル\n",
+      "中国\t名詞,固有名詞,地域,国,*,*,中国,チュウゴク,チューゴク\n",
+      "原産\t名詞,一般,*,*,*,*,原産,ゲンサン,ゲンサン\n",
+      "の\t助詞,連体化,*,*,*,*,の,ノ,ノ\n",
+      "日本\t名詞,固有名詞,地域,国,*,*,日本,ニッポン,ニッポン\n",
+      "スモモ\t名詞,一般,*,*,*,*,スモモ,スモモ,スモモ\n",
+      "と\t助詞,並立助詞,*,*,*,*,と,ト,ト\n",
+      "、\t記号,読点,*,*,*,*,、,、,、\n",
+      "ヨーロッパ・コーカサス\t名詞,一般,*,*,*,*,ヨーロッパ・コーカサス,*,*\n",
+      "原産\t名詞,一般,*,*,*,*,原産,ゲンサン,ゲンサン\n",
+      "の\t助詞,連体化,*,*,*,*,の,ノ,ノ\n",
+      " \t記号,空白,*,*,*,*, ,*,*\n",
+      "ヨーロッパ\t名詞,固有名詞,地域,一般,*,*,ヨーロッパ,ヨーロッパ,ヨーロッパ\n",
+      "スモモ\t名詞,一般,*,*,*,*,スモモ,スモモ,スモモ\n",
+      "・\t記号,一般,*,*,*,*,・,・,・\n",
+      "アメリカ\t名詞,固有名詞,地域,国,*,*,アメリカ,アメリカ,アメリカ\n",
+      "スモモ\t名詞,一般,*,*,*,*,スモモ,スモモ,スモモ\n",
+      "に\t助詞,格助詞,一般,*,*,*,に,ニ,ニ\n",
+      "大別\t名詞,サ変接続,*,*,*,*,大別,タイベツ,タイベツ\n",
+      "できる\t動詞,自立,*,*,一段,基本形,できる,デキル,デキル\n",
+      "。\t記号,句点,*,*,*,*,。,。,。\n",
+      "日本\t名詞,固有名詞,地域,国,*,*,日本,ニッポン,ニッポン\n",
+      "の\t助詞,連体化,*,*,*,*,の,ノ,ノ\n",
+      "スモモ\t名詞,一般,*,*,*,*,スモモ,スモモ,スモモ\n",
+      "は\t助詞,係助詞,*,*,*,*,は,ハ,ワ\n",
+      "ニホンスモモ\t名詞,一般,*,*,*,*,ニホンスモモ,*,*\n",
+      "が\t助詞,格助詞,一般,*,*,*,が,ガ,ガ\n",
+      "多\t接頭詞,名詞接続,*,*,*,*,多,タ,タ\n",
+      "品種\t名詞,一般,*,*,*,*,品種,ヒンシュ,ヒンシュ\n",
+      "と\t助詞,並立助詞,*,*,*,*,と,ト,ト\n",
+      "交雑\t名詞,一般,*,*,*,*,交雑,コウザツ,コーザツ\n",
+      "し\t動詞,自立,*,*,サ変・スル,連用形,する,シ,シ\n",
+      "て\t助詞,接続助詞,*,*,*,*,て,テ,テ\n",
+      "でき\t動詞,非自立,*,*,一段,連用形,できる,デキ,デキ\n",
+      "た\t助動詞,*,*,*,特殊・タ,基本形,た,タ,タ\n",
+      "品種\t名詞,一般,*,*,*,*,品種,ヒンシュ,ヒンシュ\n",
+      "で\t助詞,格助詞,一般,*,*,*,で,デ,デ\n",
+      "、\t記号,読点,*,*,*,*,、,、,、\n",
+      "総称\t名詞,サ変接続,*,*,*,*,総称,ソウショウ,ソーショー\n",
+      "し\t動詞,自立,*,*,サ変・スル,連用形,する,シ,シ\n",
+      "て\t助詞,接続助詞,*,*,*,*,て,テ,テ\n",
+      "「\t記号,括弧開,*,*,*,*,「,「,「\n",
+      "プラム\t名詞,一般,*,*,*,*,プラム,プラム,プラム\n",
+      "」\t記号,括弧閉,*,*,*,*,」,」,」\n",
+      "と\t助詞,格助詞,引用,*,*,*,と,ト,ト\n",
+      "よば\t動詞,自立,*,*,五段・バ行,未然形,よぶ,ヨバ,ヨバ\n",
+      "れ\t動詞,接尾,*,*,一段,連用形,れる,レ,レ\n",
+      "て\t助詞,接続助詞,*,*,*,*,て,テ,テ\n",
+      "いる\t動詞,非自立,*,*,一段,基本形,いる,イル,イル\n",
+      "。\t記号,句点,*,*,*,*,。,。,。\n",
+      "19\t名詞,数,*,*,*,*,19,*,*\n",
+      "世紀\t名詞,一般,*,*,*,*,世紀,セイキ,セイキ\n",
+      "に\t助詞,格助詞,一般,*,*,*,に,ニ,ニ\n",
+      "アメリカ\t名詞,固有名詞,地域,国,*,*,アメリカ,アメリカ,アメリカ\n",
+      "に\t助詞,格助詞,一般,*,*,*,に,ニ,ニ\n",
+      "渡っ\t動詞,自立,*,*,五段・ラ行,連用タ接続,渡る,ワタッ,ワタッ\n",
+      "た\t助動詞,*,*,*,特殊・タ,基本形,た,タ,タ\n",
+      "スモモ\t名詞,一般,*,*,*,*,スモモ,スモモ,スモモ\n",
+      "は\t助詞,係助詞,*,*,*,*,は,ハ,ワ\n",
+      "育種\t名詞,サ変接続,*,*,*,*,育種,イクシュ,イクシュ\n",
+      "家\t名詞,接尾,一般,*,*,*,家,カ,カ\n",
+      "の\t助詞,連体化,*,*,*,*,の,ノ,ノ\n",
+      "ルーサー・バーバンク\t名詞,一般,*,*,*,*,ルーサー・バーバンク,*,*\n",
+      "の\t助詞,連体化,*,*,*,*,の,ノ,ノ\n",
+      "手\t名詞,一般,*,*,*,*,手,テ,テ\n",
+      "により\t助詞,格助詞,連語,*,*,*,により,ニヨリ,ニヨリ\n",
+      "「\t記号,括弧開,*,*,*,*,「,「,「\n",
+      "ソル\t名詞,一般,*,*,*,*,ソル,ソル,ソル\n",
+      "ダム\t名詞,一般,*,*,*,*,ダム,ダム,ダム\n",
+      "」\t記号,括弧閉,*,*,*,*,」,」,」\n",
+      "「\t記号,括弧開,*,*,*,*,「,「,「\n",
+      "サンタローザ\t名詞,固有名詞,一般,*,*,*,サンタローザ,*,*\n",
+      "」\t記号,括弧閉,*,*,*,*,」,」,」\n",
+      "「\t記号,括弧開,*,*,*,*,「,「,「\n",
+      "ビューティー\t名詞,一般,*,*,*,*,ビューティー,ビューティー,ビューティー\n",
+      "」\t記号,括弧閉,*,*,*,*,」,」,」\n",
+      "など\t助詞,副助詞,*,*,*,*,など,ナド,ナド\n",
+      "の\t助詞,連体化,*,*,*,*,の,ノ,ノ\n",
+      "品種\t名詞,一般,*,*,*,*,品種,ヒンシュ,ヒンシュ\n",
+      "として\t助詞,格助詞,連語,*,*,*,として,トシテ,トシテ\n",
+      "改良\t名詞,サ変接続,*,*,*,*,改良,カイリョウ,カイリョー\n",
+      "さ\t動詞,自立,*,*,サ変・スル,未然レル接続,する,サ,サ\n",
+      "れ\t動詞,接尾,*,*,一段,連用形,れる,レ,レ\n",
+      "、\t記号,読点,*,*,*,*,、,、,、\n",
+      " \t記号,空白,*,*,*,*, ,*,*\n",
+      "再び\t副詞,助詞類接続,*,*,*,*,再び,フタタビ,フタタビ\n",
+      "日本\t名詞,固有名詞,地域,国,*,*,日本,ニッポン,ニッポン\n",
+      "に\t助詞,格助詞,一般,*,*,*,に,ニ,ニ\n",
+      "「\t記号,括弧開,*,*,*,*,「,「,「\n",
+      "プラム\t名詞,一般,*,*,*,*,プラム,プラム,プラム\n",
+      "」\t記号,括弧閉,*,*,*,*,」,」,」\n",
+      "として\t助詞,格助詞,連語,*,*,*,として,トシテ,トシテ\n",
+      "輸入\t名詞,サ変接続,*,*,*,*,輸入,ユニュウ,ユニュー\n",
+      "さ\t動詞,自立,*,*,サ変・スル,未然レル接続,する,サ,サ\n",
+      "れ\t動詞,接尾,*,*,一段,連用形,れる,レ,レ\n",
+      "た\t助動詞,*,*,*,特殊・タ,基本形,た,タ,タ\n",
+      "。\t記号,句点,*,*,*,*,。,。,。\n",
+      "それら\t名詞,代名詞,一般,*,*,*,それら,ソレラ,ソレラ\n",
+      "を\t助詞,格助詞,一般,*,*,*,を,ヲ,ヲ\n",
+      "元\t名詞,一般,*,*,*,*,元,モト,モト\n",
+      "に\t助詞,格助詞,一般,*,*,*,に,ニ,ニ\n",
+      "日本\t名詞,固有名詞,地域,国,*,*,日本,ニッポン,ニッポン\n",
+      "で\t助詞,格助詞,一般,*,*,*,で,デ,デ\n",
+      "は\t助詞,係助詞,*,*,*,*,は,ハ,ワ\n",
+      "「\t記号,括弧開,*,*,*,*,「,「,「\n",
+      "大石\t名詞,固有名詞,人名,姓,*,*,大石,オオイシ,オーイシ\n",
+      "早生\t名詞,一般,*,*,*,*,早生,ワセ,ワセ\n",
+      "」\t記号,括弧閉,*,*,*,*,」,」,」\n",
+      "「\t記号,括弧開,*,*,*,*,「,「,「\n",
+      "月光\t名詞,一般,*,*,*,*,月光,ゲッコウ,ゲッコー\n",
+      "」\t記号,括弧閉,*,*,*,*,」,」,」\n",
+      "など\t助詞,副助詞,*,*,*,*,など,ナド,ナド\n",
+      "に\t助詞,格助詞,一般,*,*,*,に,ニ,ニ\n",
+      "発展\t名詞,サ変接続,*,*,*,*,発展,ハッテン,ハッテン\n",
+      "さ\t動詞,自立,*,*,サ変・スル,未然レル接続,する,サ,サ\n",
+      "せ\t動詞,接尾,*,*,一段,連用形,せる,セ,セ\n",
+      "て\t助詞,接続助詞,*,*,*,*,て,テ,テ\n",
+      "いっ\t動詞,非自立,*,*,五段・カ行促音便,連用タ接続,いく,イッ,イッ\n",
+      "た\t助動詞,*,*,*,特殊・タ,基本形,た,タ,タ\n",
+      "[\t名詞,サ変接続,*,*,*,*,[,*,*\n",
+      "6\t名詞,数,*,*,*,*,6,*,*\n",
+      "]。\t名詞,サ変接続,*,*,*,*,]。,*,*\n",
+      "一方\t接続詞,*,*,*,*,*,一方,イッポウ,イッポー\n",
+      "、\t記号,読点,*,*,*,*,、,、,、\n",
+      "ヨーロッパ\t名詞,固有名詞,地域,一般,*,*,ヨーロッパ,ヨーロッパ,ヨーロッパ\n",
+      "スモモ\t名詞,一般,*,*,*,*,スモモ,スモモ,スモモ\n",
+      "は\t助詞,係助詞,*,*,*,*,は,ハ,ワ\n",
+      "、\t記号,読点,*,*,*,*,、,、,、\n",
+      "青\t名詞,一般,*,*,*,*,青,アオ,アオ\n",
+      "紫色\t名詞,一般,*,*,*,*,紫色,ムラサキイロ,ムラサキイロ\n",
+      "の\t助詞,連体化,*,*,*,*,の,ノ,ノ\n",
+      " \t記号,空白,*,*,*,*, ,*,*\n",
+      "楕円\t名詞,一般,*,*,*,*,楕円,ダエン,ダエン\n",
+      "タイプ\t名詞,一般,*,*,*,*,タイプ,タイプ,タイプ\n",
+      "が\t助詞,格助詞,一般,*,*,*,が,ガ,ガ\n",
+      "多く\t形容詞,自立,*,*,形容詞・アウオ段,連用テ接続,多い,オオク,オーク\n",
+      "、\t記号,読点,*,*,*,*,、,、,、\n",
+      "日本\t名詞,固有名詞,地域,国,*,*,日本,ニッポン,ニッポン\n",
+      "で\t助詞,格助詞,一般,*,*,*,で,デ,デ\n",
+      "は\t助詞,係助詞,*,*,*,*,は,ハ,ワ\n",
+      "プルーン\t名詞,一般,*,*,*,*,プルーン,*,*\n",
+      "が\t助詞,格助詞,一般,*,*,*,が,ガ,ガ\n",
+      "よく\t副詞,一般,*,*,*,*,よく,ヨク,ヨク\n",
+      "知ら\t動詞,自立,*,*,五段・ラ行,未然形,知る,シラ,シラ\n",
+      "れ\t動詞,接尾,*,*,一段,連用形,れる,レ,レ\n",
+      "て\t助詞,接続助詞,*,*,*,*,て,テ,テ\n",
+      "いる\t動詞,非自立,*,*,一段,基本形,いる,イル,イル\n",
+      "161\n",
+      "7\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "from janome.tokenizer import Tokenizer\n",
+    "from collections import Counter\n",
+    "\n",
+    "sentence = 'スモモとよばれる栽培種は多数あり、日本に多く見られる中国原産の日本スモモと、ヨーロッパ・コーカサス原産の \\\n",
+    "ヨーロッパスモモ・アメリカスモモに大別できる。日本のスモモはニホンスモモが多品種と交雑してできた品種で、総称して「プラム」とよばれている。\\\n",
+    "19世紀にアメリカに渡ったスモモは育種家のルーサー・バーバンクの手により「ソルダム」「サンタローザ」「ビューティー」などの品種として改良され、 \\\n",
+    "再び日本に「プラム」として輸入された。それらを元に日本では「大石早生」「月光」などに発展させていった[6]。一方、ヨーロッパスモモは、青紫色の \\\n",
+    "楕円タイプが多く、日本ではプルーンがよく知られている'\n",
+    "t = Tokenizer()\n",
+    "words=[]\n",
+    "for token in t.tokenize(sentence):\n",
+    "    print(token)\n",
+    "    words.append(token.surface)\n",
+    "print(len(words))\n",
+    "w_dict = dict(Counter(words))\n",
+    "print(w_dict['スモモ'])"
+   ]
   },
   {
    "cell_type": "code",
@@ -141,7 +332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
